fixed gap on music

--- a/style.css
+++ b/style.css
@@ -94,6 +94,5 @@ background-image: url('/static/backround-blur.jpg'); background-repeat: no-repea
 
 .music-images {
     display: flex;
-    gap: 20px;
-    align-items: center
+    gap: 20%;
 }
